--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,17 @@ dependencies {
     // Glide
  //   compile 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //modal inferior
+  //  implementation 'androidx.support:design:28.0.0'
 
     // Recyclerview
    // compile 'com.android.support:recyclerview-v7:25.1.1'
+    //reycler horizonta dentro de vertical
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    //cardview
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
+    implementation "androidx.cardview:cardview:1.0.0"
+    //preference
+    implementation "androidx.preference:preference:1.1.1"
+
 }
